--- a/15 English Dictionary/style.css
+++ b/15 English Dictionary/style.css
@@ -1,75 +1,81 @@
 body {
-    margin: 0;
+    font-family: "Poppins";
+    background: linear-gradient(to right, lightblue,  yellow);
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
     display: flex;
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    font-family: "Poppins", sans-serif;
-    background: linear-gradient(to right bottom, lightblue, lightgreen)
 }
 
 .container {
-    background-color: rgba(251, 251, 251, 0.25);
-    padding: 30px;
-    border-radius: 7px;
-    width: 90%;
+    background-color: rgb(255, 255, 255);
+    padding: 1rem  3rem;
+    text-align: center;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
     margin: 1rem;
     max-width: 500px;
-    text-align: center;
-    font-size: 18px;
-    font-weight: 500;
-    box-shadow: 0 10px 10px rgba(127, 128, 127, 0.267);
 }
 
-h1.title {
-    font-size: 2rem;
-    color: rgb(2, 97, 30);
-}
-
-input {
-    font-size: 1rem;
-    padding: 1rem 4rem 1rem 0.7rem;
-    max-width: 300px;
+button {
+    margin-bottom: 2rem;
+    padding: 1rem 3rem;
+    background-color: rgb(6, 83, 226);
+    color: white;
+    font-size: 1.1rem;
     border-radius: 5px;
     border: none;
-    margin-top: 2rem;
-    outline: 2px solid rgba(2, 102, 173, 0.973);
+    cursor: pointer;
+    transition: all 0.3s ease;
 }
 
-input::placeholder {
-    color: rgba(82, 86, 87, 0.836);
+button:hover {
+    background-color: rgb(6, 60, 160);
+
 }
 
-.meaning-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+button:disabled {
+    background: grey;
+    cursor: grab;
 }
 
-.word-title {
-    font-style: 1rem;
-    font-weight: bold;
-    color: rgb(13, 44, 182);
+.photo-container {
+    border: 4px solid rgb(6, 83, 226);
+    width: 250px;
+    height: 250px;
+    margin: 0 auto;
+    border-radius: 50%;
+    overflow: hidden;
+    transition: all 0.3s ease-in-out;
 }
 
-.word-title span, .word-meaning span {
+.photo-container:hover {
+    box-shadow: 0 0 10px 5px rgb(6, 83, 226);;
+}
+
+img {
+    width: 100%;
+    height: 100%;
+    aspect-ratio: 1;
+}
+
+h3 {
+    background-color: rgb(6, 83, 226);
+    max-width: 100%;
+    padding: 1rem 0;
+    border-radius: 5px;
+    color: white;
+    font-size: 1rem;
     font-weight: 300;
-    font-size: 1rem;
-    color: rgb(10, 0, 0);
-    
 }
 
-.word-meaning {
-    font-size: 1rem;
-    font-weight: bold;
-    color: rgb(31, 122, 8);
-}
 
-audio {
-    width: 80%;
-    max-width: 400px;
-    border: 2px solid;
-    border-radius: 50px;
-    border-color: rgba(0, 0, 255, 0.219);
+
+@media screen and (max-width: 500px) {
+    h1 {
+        font-size: 1.5rem;
+    }
 }
